// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-2 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label,
.emotion-0:indeterminate:disabled + label {
  background: #c3cfd5;
}

.emotion-0:disabled + label {
  background: #c3cfd5;
}

.emotion-0:checked + label::before {
  background: #ffffff;
}

.emotion-0:checked:disabled + label::before {
  background: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
}

.emotion-0:disabled + label::before {
  background: #b4c3ca;
}

.emotion-1 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 50%;
}

.emotion-1:before {
  border-radius: 50%;
  background-color: #ffffff;
  width: 6px;
  height: 6px;
}

<div
  class="emotion-2"
>
  <input
    aria-label="radio-button"
    class="emotion-0"
    data-test-id="cf-ui-radio-button"
    type="radio"
    value=""
  />
  <label
    class="emotion-1"
  />
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-2 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label,
.emotion-0:indeterminate:disabled + label {
  background: #c3cfd5;
}

.emotion-0:disabled + label {
  background: #c3cfd5;
}

.emotion-0:checked + label::before {
  background: #ffffff;
}

.emotion-0:checked:disabled + label::before {
  background: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
}

.emotion-0:disabled + label::before {
  background: #b4c3ca;
}

.emotion-1 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 50%;
}

.emotion-1:before {
  border-radius: 50%;
  background-color: #ffffff;
  width: 6px;
  height: 6px;
}

<div
  class="emotion-2 my-extra-class"
>
  <input
    aria-label="radio-button"
    class="emotion-0"
    data-test-id="cf-ui-radio-button"
    type="radio"
    value=""
  />
  <label
    class="emotion-1"
  />
</div>
`;
